1202 fixed, by using parseCaseInsensitive() function